<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/imc"
        android:textColor="#039BE5"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Calculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/calculadora"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/caixa_de_sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:checkedButton="@id/caixa_homem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Calculadora">

        <RadioButton
            android:id="@+id/caixa_homem"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/caixa_homem"
            android:textColor="#000000"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/caixa_mulher"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/caixa_mulher"
            android:textColor="#000000"
            android:textSize="24sp" />

    </RadioGroup>


    <Button
        android:id="@+id/button_calcular"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#00FF00"
        android:text="@string/button_calcular"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/altura_campo"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/campo_altura"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caixa_de_sexo" />

    <EditText
        android:id="@+id/peso_campo"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:hint="@string/peso_altura"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altura_campo"
        app:layout_constraintVertical_bias="0.428" />


</androidx.constraintlayout.widget.ConstraintLayout>